--- a/wp-content/plugins/projectdoom/doom-app/assets/libs/doom-icons/demo.html
+++ b/wp-content/plugins/projectdoom/doom-app/assets/libs/doom-icons/demo.html
@@ -9,10 +9,42 @@
     <link rel="stylesheet" href="style.css"></head>
 <body>
     <div class="bgc1 clearfix">
-        <h1 class="mhmm mvm"><span class="fgc1">Font Name:</span> doom-icons <small class="fgc1">(Glyphs:&nbsp;21)</small></h1>
+        <h1 class="mhmm mvm"><span class="fgc1">Font Name:</span> doom-icons <small class="fgc1">(Glyphs:&nbsp;23)</small></h1>
     </div>
     <div class="clearfix mhl ptl">
         <h1 class="mvm mtn fgc1">Grid Size: Unknown</h1>
+        <div class="glyph fs1">
+            <div class="clearfix bshadow0 pbs">
+                <span class="icon-blood">
+                
+                </span>
+                <span class="mls"> icon-blood</span>
+            </div>
+            <fieldset class="fs0 size1of1 clearfix hidden-false">
+                <input type="text" readonly value="e918" class="unit size1of2" />
+                <input type="text" maxlength="1" readonly value="&#xe918;" class="unitRight size1of2 talign-right" />
+            </fieldset>
+            <div class="fs0 bshadow0 clearfix hidden-true">
+                <span class="unit pvs fgc1">liga: </span>
+                <input type="text" readonly value="" class="liga unitRight" />
+            </div>
+        </div>
+        <div class="glyph fs1">
+            <div class="clearfix bshadow0 pbs">
+                <span class="icon-vomits">
+                
+                </span>
+                <span class="mls"> icon-vomits</span>
+            </div>
+            <fieldset class="fs0 size1of1 clearfix hidden-false">
+                <input type="text" readonly value="e919" class="unit size1of2" />
+                <input type="text" maxlength="1" readonly value="&#xe919;" class="unitRight size1of2 talign-right" />
+            </fieldset>
+            <div class="fs0 bshadow0 clearfix hidden-true">
+                <span class="unit pvs fgc1">liga: </span>
+                <input type="text" readonly value="" class="liga unitRight" />
+            </div>
+        </div>
         <div class="glyph fs1">
             <div class="clearfix bshadow0 pbs">
                 <span class="icon-ant">
